bin/testsuite/tests/compiler/src/errors/compiler1266.swg
#global testerror "Err0094"

func getCharCount(buffer: *u8)
{
    var x = y
    var y = 0
}
